==> RT-Thread/rt-thread/bsp/stm32/stm32f407-rt-spark/board/ports/lcd/drv_lcd.c <==
#include <rtdevice.h>
#include <board.h>
#include <string.h>
#include <drv_gpio.h>
#include "drv_lcd.h"
#include "drv_lcd_font.h"
#define DRV_DEBUG
#define LOG_TAG "drv.lcd"
#include <drv_log.h>
#define LCD_CLEAR_SEND_NUMBER 5760
    #define PWM_BL_NAME        "pwm14"              /* 背光PWM设备名称 */
    #define PWM_BL_CHANNEL     1                    /* 背光PWM通道 */
    #define PWM_BL_PERIOD      500000               /* 0.5ms = 2000 Hz*/
    #define LCD_BL  GET_PIN(F, 9)
#define LCD_RST GET_PIN(D, 3)
#define LCD_DEVICE(dev) (struct drv_lcd_device *)(dev)

void LCD_PWM_BackLightInit()
{
    pwm_bl_dev = (struct rt_device_pwm *)rt_device_find(PWM_BL_NAME);
    if(RT_NULL != pwm_bl_dev)
    {
        /* 设置PWM周期和脉冲宽度默认值 */
        rt_pwm_set(pwm_bl_dev, PWM_BL_CHANNEL, PWM_BL_PERIOD, 0);

    }
    else
    {
        LOG_E("pwm backlight error!");
    }
}

void LCD_BackLightSet(uint8_t value)
{
    value = value > 100 ? 100 : value;
    if(RT_NULL != pwm_bl_dev)
    {
        /* 设置PWM周期和脉冲宽度默认值 */
        rt_pwm_set(pwm_bl_dev, PWM_BL_CHANNEL, PWM_BL_PERIOD, (PWM_BL_PERIOD/100)*value);
        /* 使能设备 */
        rt_pwm_enable(pwm_bl_dev, PWM_BL_CHANNEL);

        LOG_D("backlight %d percent", value);
    }
    else
    {
        LOG_E("backlight set error!");
    }
}

int drv_lcd_init(void)
{

    SRAM_HandleTypeDef hsram1 = {0};
    FSMC_NORSRAM_TimingTypeDef read_timing = {0};
    FSMC_NORSRAM_TimingTypeDef write_timing = {0};

#ifndef BSP_USING_ONBOARD_LCD_PWM_BL
    rt_pin_mode(LCD_BL, PIN_MODE_OUTPUT);
#endif /* BSP_USING_ONBOARD_LCD_PWM_BL */

    rt_pin_mode(LCD_RST, PIN_MODE_OUTPUT);

    rt_pin_write(LCD_RST, PIN_LOW);
    rt_thread_mdelay(100);
    rt_pin_write(LCD_RST, PIN_HIGH);
    rt_thread_mdelay(100);
    // FSMC_NORSRAM_TimingTypeDef Timing = {0};

    /** Perform the SRAM1 memory initialization sequence
     */
    hsram1.Instance = FSMC_NORSRAM_DEVICE;
    hsram1.Extended = FSMC_NORSRAM_EXTENDED_DEVICE;
    /* hsram1.Init */
    hsram1.Init.NSBank = FSMC_NORSRAM_BANK3;
    hsram1.Init.DataAddressMux = FSMC_DATA_ADDRESS_MUX_DISABLE;
    hsram1.Init.MemoryType = FSMC_MEMORY_TYPE_SRAM;
    hsram1.Init.MemoryDataWidth = FSMC_NORSRAM_MEM_BUS_WIDTH_8;
    hsram1.Init.BurstAccessMode = FSMC_BURST_ACCESS_MODE_DISABLE;
    hsram1.Init.WaitSignalPolarity = FSMC_WAIT_SIGNAL_POLARITY_LOW;
    hsram1.Init.WrapMode = FSMC_WRAP_MODE_DISABLE;
    hsram1.Init.WaitSignalActive = FSMC_WAIT_TIMING_BEFORE_WS;
    hsram1.Init.WriteOperation = FSMC_WRITE_OPERATION_ENABLE;
    hsram1.Init.WaitSignal = FSMC_WAIT_SIGNAL_DISABLE;
    hsram1.Init.ExtendedMode = FSMC_EXTENDED_MODE_ENABLE;
    hsram1.Init.AsynchronousWait = FSMC_ASYNCHRONOUS_WAIT_DISABLE;
    hsram1.Init.WriteBurst = FSMC_WRITE_BURST_DISABLE;
    hsram1.Init.PageSize = FSMC_PAGE_SIZE_NONE;
    // /* Timing */

    read_timing.AddressSetupTime = 0XF;  //地址建立时间（ADDSET）为16个HCLK 1/168M=6ns*16=96ns
    read_timing.AddressHoldTime = 0x00;  //地址保持时间（ADDHLD）模式A未用到
    read_timing.DataSetupTime = 60;         //数据保存时间为60个HCLK    =6*60=360ns
    read_timing.BusTurnAroundDuration = 0x00;
    read_timing.CLKDivision = 0x00;
    read_timing.DataLatency = 0x00;
    read_timing.AccessMode = FSMC_ACCESS_MODE_A;     //模式A


    write_timing.AddressSetupTime =9;         //地址建立时间（ADDSET）为9个HCLK =54ns
    write_timing.AddressHoldTime = 0x00;     //地址保持时间（A
    write_timing.DataSetupTime = 8;      //数据保存时间为6ns*9个HCLK=54ns
    write_timing.BusTurnAroundDuration = 0x00;
    write_timing.CLKDivision = 0x00;
    write_timing.DataLatency = 0x00;
    write_timing.AccessMode = FSMC_ACCESS_MODE_A;    //模式A

    if (HAL_SRAM_Init(&hsram1, &read_timing, &write_timing) != HAL_OK)
    {
        Error_Handler( );
    }

    rt_thread_mdelay(100);

    // 尝试st7789v3 ID的读取
    LCD_WR_REG(0X04);
    lcddev.id = LCD_RD_DATA8(); // dummy read
    lcddev.id = LCD_RD_DATA8(); // ID2
    lcddev.id = LCD_RD_DATA8(); // ID3
    lcddev.id <<= 8;
    lcddev.id |= LCD_RD_DATA8();

    LOG_I(" LCD ID:%x", lcddev.id); // 打印LCD ID
    if (lcddev.id == 0X81b3) //st7789v3
    {
        //************* Start Initial Sequence **********//
        /* Memory Data Access Control */
        LCD_WR_REG(0x36);
        LCD_WR_DATA8(0x00);
        /* RGB 5-6-5-bit  */
        LCD_WR_REG(0x3A);
        LCD_WR_DATA8(0x65);
        /* Porch Setting */
        LCD_WR_REG(0xB2);
        LCD_WR_DATA8(0x0C);
        LCD_WR_DATA8(0x0C);
        LCD_WR_DATA8(0x00);
        LCD_WR_DATA8(0x33);
        LCD_WR_DATA8(0x33);
        /*  Gate Control */
        LCD_WR_REG(0xB7);
        LCD_WR_DATA8(0x35);
        /* VCOM Setting */
        LCD_WR_REG(0xBB);
        LCD_WR_DATA8(0x37);
        /* LCM Control */
        LCD_WR_REG(0xC0);
        LCD_WR_DATA8(0x2C);
        /* VDV and VRH Command Enable */
        LCD_WR_REG(0xC2);
        LCD_WR_DATA8(0x01);
        /* VRH Set */
        LCD_WR_REG(0xC3);
        LCD_WR_DATA8(0x12);
        /* VDV Set */
        LCD_WR_REG(0xC4);
        LCD_WR_DATA8(0x20);
        /* Frame Rate Control in Normal Mode */
        LCD_WR_REG(0xC6);
        LCD_WR_DATA8(0x0F);
        /* Power Control 1 */
        LCD_WR_REG(0xD0);
        LCD_WR_DATA8(0xA4);
        LCD_WR_DATA8(0xA1);
        /* Positive Voltage Gamma Control */
        LCD_WR_REG(0xE0);
        LCD_WR_DATA8(0xD0);
        LCD_WR_DATA8(0x04);
        LCD_WR_DATA8(0x0D);
        LCD_WR_DATA8(0x11);
        LCD_WR_DATA8(0x13);
        LCD_WR_DATA8(0x2B);
        LCD_WR_DATA8(0x3F);
        LCD_WR_DATA8(0x54);
        LCD_WR_DATA8(0x4C);
        LCD_WR_DATA8(0x18);
        LCD_WR_DATA8(0x0D);
        LCD_WR_DATA8(0x0B);
        LCD_WR_DATA8(0x1F);
        LCD_WR_DATA8(0x23);
        /* Negative Voltage Gamma Control */
        LCD_WR_REG(0xE1);
        LCD_WR_DATA8(0xD0);
        LCD_WR_DATA8(0x04);
        LCD_WR_DATA8(0x0C);
        LCD_WR_DATA8(0x11);
        LCD_WR_DATA8(0x13);
        LCD_WR_DATA8(0x2C);
        LCD_WR_DATA8(0x3F);
        LCD_WR_DATA8(0x44);
        LCD_WR_DATA8(0x51);
        LCD_WR_DATA8(0x2F);
        LCD_WR_DATA8(0x1F);
        LCD_WR_DATA8(0x1F);
        LCD_WR_DATA8(0x20);
        LCD_WR_DATA8(0x23);
        /* Display Inversion On */
        LCD_WR_REG(0x21);       // 开启反色
        /* TearEffect Sync On */
        LCD_WR_REG(0x35);       // 开启TE
        LCD_WR_DATA8(0x00);     // TE 同步方式：vsync 同步
        /* Sleep Out */
        LCD_WR_REG(0x11);

        rt_thread_mdelay(120);
        /* display on */
        LCD_WR_REG(0x29);       // 开启显示
    }

    // 初始化完成以后,提速
    if (lcddev.id == 0X81b3) //st7789v3可以设置WR时序为最快
    {
        // 重新配置写时序控制寄存器的时序
        FSMC_Bank1E->BWTR[6] &= ~(0XF << 0); // 地址建立时间(ADDSET)清零
        FSMC_Bank1E->BWTR[6] &= ~(0XF << 8); // 数据保存时间清零
        FSMC_Bank1E->BWTR[6] |= 3 << 0;      // 地址建立时间(ADDSET)为3个HCLK =18ns
        FSMC_Bank1E->BWTR[6] |= 2 << 8;      // 数据保存时间(DATAST)为6ns*3个HCLK=18ns
    }
    LCD_Display_Dir(0); // 默认为横屏
#ifdef BSP_USING_ONBOARD_LCD_PWM_BL
    LCD_PWM_BackLightInit();
    LCD_BackLightSet(80);
#else
    rt_pin_write(LCD_BL, PIN_HIGH); // 开启背光
#endif /* BSP_USING_ONBOARD_LCD_PWM_BL */

    lcd_clear(WHITE);

    return RT_EOK;
}

void lcd_auto_fill(void *para)
{
    int num = (int)para;
    do
    {
        lcd_clear(rt_tick_get()%65535);
        rt_thread_mdelay(500);
    } while (--num);
}
